Dodanie konta oraz user session